<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/mainView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".fragments.EndGameFragment">

    <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text_view"
            android:textSize="24sp"
    />
    <TextView
            android:id="@+id/highScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_text_view"
            android:textSize="24sp"
    />
    <Button
            android:id="@+id/restartGameButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button"
            android:elevation="2dp"
            android:text="@string/restart_game_button"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonMainActivity"

    />
    <Button
            android:id="@+id/gotoMainViewButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button"
            android:elevation="2dp"
            android:text="@string/goto_main_view_button"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonMainActivity"

    />
</LinearLayout>